<resources>
    <string name="app_name">TestApp</string>
    <string name="app_group1">SP-13</string>
    <string name="app_group2">SP-12</string>
    <string name="app_groupOther">OTHER</string>
    <string name="app_mainText">Schedule</string>
    <string name="app_chooseDay">Select a day</string>
    <string name="app_MND">Monday</string>
    <string name="app_TUE">Tuesday</string>
    <string name="app_WED">Wednesday</string>
    <string name="app_THR">Thursday</string>
    <string name="app_FRI">Friday</string>
    <string name="app_SAT">Saturday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>