<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ScheduleActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="monday_btn"
            android:text="@string/app_MND"
            android:textSize="10dp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="tuesday_btn"
            android:text="@string/app_TUE"
            android:textSize="10dp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="wednesday_btn"
            android:text="WEDNSD."
            android:textSize="10dp"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button6"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="thursday_btn"
            android:text="@string/app_THR"
            android:textSize="10dp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="friday_btn"
            android:text="@string/app_FRI"
            android:textSize="10dp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:onClick="saturday_btn"
            android:text="@string/app_SAT"
            android:textSize="10dp"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:textSize="35dp"
        android:fontFamily="@font/alfa_slab_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_chooseDay"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frameLayout"
        android:name="com.example.testapp.MondayFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="150dp"
        android:onClick="back_btn"
        android:text="Back"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>